--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -20,8 +20,9 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/about/">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/contacts/">Contacts</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/page2/">Страница №2</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/page_for_admin/">Страница Админа</a></li>
                     </ul>
                 </div>
             </div>
@@ -31,6 +32,7 @@
    <div class="row">
        <div class="col-lg-12 text-center">
            {% block content %}
+           {{ flatpage.content }} <br>
            {{ flatpage.content }}
            {% endblock content %}
        </div>
